--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   margin: 0 auto;
   width: 600px;
 }
@@ -11,4 +11,12 @@ section h1 {
 form textarea {
   width: 100%;
   height: 200px;
+}
+
+pre {
+    white-space: -moz-pre-wrap; /* Mozilla */
+    white-space: -pre-wrap;     /* Opera 4-6 */
+    white-space: -o-pre-wrap;   /* Opera 7 */
+    white-space: pre-wrap;      /* CSS3 */
+    word-wrap: break-word;      /* IE 5.5+ */
 }
